@@ -1,3 +1,8 @@
+2011-02-14  Lars Ingebrigtsen  <larsi@gnus.org>
+
+	* message.el (message-reply): Take an optional switch-buffer parameter
+	so that Gnus window confs are respected better.
+
 2011-02-14  Teodor Zlatanov  <tzz@lifelogs.com>
 
 	* auth-source.el (auth-source-backend-parse-parameters): Don't rely on
